--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
   <head>
     <link rel="stylesheet" href="./resources/css/reset.css">
     <link rel="stylesheet" href="./resources/css/style.css">
-    <title></title>
+    <title>Capstone</title>
   </head>
   <body>
-
+    <header>
+      <div class="navigation">
+        <div class="logo">
+          <img src="./resources/images/ic-logo.svg"/>
+          <h4>COLMAR
+            <span>ACADEMY</span>
+          </h4>
+        </div>
+        <nav class="desktop-menu">
+          <ul>
+            <li>On Campus</li>
+            <li>Online</li>
+            <li>For Companies</li>
+            <li>Sign In</li>
+          </ul>
+        </nav>
+        <nav class="mobile-menu">
+          <ul>
+            <li><img src="./resources/images/ic-logo.svg"/></li>
+            <li><img src="./resources/images/ic-on-campus.svg"/></li>
+            <li><img src="./resources/images/ic-online.svg"/></li>
+            <li><img src="./resources/images/ic-login.svg"/></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
