--- a/index.html
+++ b/index.html
@@ -32,5 +32,51 @@
         </nav>
       </div>
     </header>
+    <main class="main-content">
+      <section class="first-section">
+        <img src="./resources/images/banner.jpg"/>
+        <div class="side-text">
+          <h1>Learn something new everyday</h1>
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+          <h4>Start here</h4>
+        </div>
+      </section>
+      <section class="information">
+        <div class="container">
+          <div class="left-side">
+            <img src="./resources/images/information-main.jpg"/>
+            <h1>It doesn't hurt to keep practicing</h1>
+            <p>"Curabitur vitae libero ipsum porttior consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet efficitur dolo consequat, tristique ligula."</p>
+            <h5>Emanuel, Sr Strategist at Hiring.com</h5>
+          </div>
+          <div class="right-side">
+            <div class="box">
+              <img src="./resources/images/information-orientation.jpg"/>
+              <div class="side-text">
+                <h2>Orientation date</h2>
+                <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                <a href="">Read More</a>
+              </div>
+            </div>
+            <div class="box">
+              <img src="./resources/images/information-campus.jpg"/>
+              <div class="side-text">
+                <h2>Our campus</h2>
+                <p>Find which campus is close to you</p>
+                <a href="">Read More</a>
+              </div>
+            </div>
+            <div class="box">
+              <img src="./resources/images/information-guest-lecture.jpg"/>
+              <div class="side-text">
+                <h2>Our guest lecture</h2>
+                <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                <a href="">Read More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
