--- a/index.html
+++ b/index.html
@@ -77,6 +77,59 @@
           </div>
         </div>
       </section>
+      <section class="learning">
+        <h1>Start learning</h1>
+        <div class="courses">
+          <div class="course-content">
+            <img src="./resources/images/course-software.jpg"/>
+            <div class="course-text">
+              <h3>Software engineering</h3>
+              <p class="title">COURSES</p>
+              <p>Web Development, Mobile Development, iOT, APIs</p>
+            </div>
+          </div>
+          <div class="course-content">
+            <img src="./resources/images/course-computer-art.jpg"/>
+            <div class="course-text">
+              <h3>Computer art</h3>
+              <p class="title">COURSES</p>
+              <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+            </div>
+          </div>
+          <div class="course-content">
+            <img src="./resources/images/course-design.jpg"/>
+            <div class="course-text">
+              <h3>Design</h3>
+              <p class="title">COURSES</p>
+              <p>User Experience Design, User Research, Visual Design</p>
+            </div>
+          </div>
+          <div class="course-content">
+            <img src="./resources/images/course-data.jpg"/>
+            <div class="course-text">
+              <h3>Data</h3>
+              <p class="title">COURSES</p>
+              <p>Data Science, Big Data, SQL, Data Visualization</p>
+            </div>
+          </div>
+          <div class="course-content">
+            <img src="./resources/images/course-business.jpg"/>
+            <div class="course-text">
+              <h3>Business</h3>
+              <p class="title">COURSES</p>
+              <p>Product Development, Business Development, Startup</p>
+            </div>
+          </div>
+          <div class="course-content">
+            <img src="./resources/images/course-marketing.jpg"/>
+            <div class="course-text">
+              <h3>Marketing</h3>
+              <p class="title">COURSES</p>
+              <p>Analytics, Content Marketing, Mobile Marketing</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
