--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
           </div>
           <div class="right-side">
             <div class="box">
-              <img src="./resources/images/information-orientation.jpg"/>
+              <img class="desktop" src="./resources/images/information-orientation.jpg"/>
+              <img class="mobile" src="./resources/images/information-orientation-mobile.jpg"/>
               <div class="side-text">
                 <h2>Orientation date</h2>
                 <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -59,7 +60,8 @@
               </div>
             </div>
             <div class="box">
-              <img src="./resources/images/information-campus.jpg"/>
+              <img class ="desktop" src="./resources/images/information-campus.jpg"/>
+              <img class="mobile" src="./resources/images/information-campus-mobile.jpg"/>
               <div class="side-text">
                 <h2>Our campus</h2>
                 <p>Find which campus is close to you</p>
@@ -67,7 +69,8 @@
               </div>
             </div>
             <div class="box">
-              <img src="./resources/images/information-guest-lecture.jpg"/>
+              <img class="desktop" src="./resources/images/information-guest-lecture.jpg"/>
+              <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg"/>
               <div class="side-text">
                 <h2>Our guest lecture</h2>
                 <p>Join a keynote with Oliver Sack about music in medical treatment</p>
