exhibit section html + css

--- a/index.html
+++ b/index.html
@@ -133,6 +133,37 @@
           </div>
         </div>
       </section>
+      <section class="exhibit">
+        <h1>Thesis exhibit</h1>
+        <div class="container">
+          <div class="left-side">
+            <video autoplay muted loop>
+              <source src="./resources/videos/thesis.mp4" type="video/mp4">
+            </video>
+            <h3>Reimagine urban</h3>
+            <p>"Curabitur vitae libero ipsum porttior consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet efficitur dolo consequat, tristique ligula."</p>
+          </div>
+          <div class="right-side">
+            <div class="box">
+              <img class="desktop" src="./resources/images/thesis-fisma.jpg"/>
+              <div class="side-text">
+                <h2>Fisma: Design and</h2>
+                <p>Designer showcase of new prototype product</p>
+              </div>
+            </div>
+            <div class="box">
+              <img class="desktop" src="./resources/images/thesis-now-and-then.jpg"/>
+              <div class="side-text">
+                <h2>Now and then</h2>
+                <p>Research study about New York</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+      </section>
     </main>
   </body>
 </html>
