--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <h1>Thesis exhibit</h1>
         <div class="container">
           <div class="left-side">
-            <video autoplay muted loop>
+            <video controls>
               <source src="./resources/videos/thesis.mp4" type="video/mp4">
             </video>
             <h3>Reimagine urban</h3>
@@ -160,10 +160,16 @@
             </div>
           </div>
         </div>
-
-
-
       </section>
     </main>
+    <footer>
+      <div class="content">
+        <span class="copyright">© 2016 Colmar Academy. All rights reserved</span>
+        <nav>
+          <span class="terms">Terms</span>
+          <span class="privacy">Privacy</span>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
