--- a/index.html
+++ b/index.html
@@ -163,11 +163,13 @@
       </section>
     </main>
     <footer>
-      <div class="content">
+      <div class="navigation">
         <span class="copyright">© 2016 Colmar Academy. All rights reserved</span>
         <nav>
-          <span class="terms">Terms</span>
-          <span class="privacy">Privacy</span>
+          <ul>
+            <li>Terms</li>
+            <li>Privacy</li>
+          </ul>
         </nav>
       </div>
     </footer>
