done media queries

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main class="main-content">
       <section class="first-section">
         <img src="./resources/images/banner.jpg"/>
-        <div class="side-text">
+        <div class="side">
           <h1>Learn something new everyday</h1>
           <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
           <h4>Start here</h4>
@@ -147,7 +147,7 @@
             <div class="box">
               <img class="desktop" src="./resources/images/thesis-fisma.jpg"/>
               <div class="side-text">
-                <h2>Fisma: Design and</h2>
+                <h2>Fisma: Design and Security</h2>
                 <p>Designer showcase of new prototype product</p>
               </div>
             </div>
