--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="./resources/css/reset.css">
-    <link rel="stylesheet" href="./resources/css/style.css">
-    <title>Capstone</title>
+    <link rel="stylesheet" type="text/css" href="./resources/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
+    <title>Colmar Academy</title>
+    <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <header>
       <div class="navigation">
         <div class="logo">
-          <img src="./resources/images/ic-logo.svg"/>
+          <img src="./resources/images/ic-logo-p.svg"/>
           <h4>COLMAR
             <span>ACADEMY</span>
           </h4>
@@ -24,10 +25,10 @@
         </nav>
         <nav class="mobile-menu">
           <ul>
-            <li><img src="./resources/images/ic-logo.svg"/></li>
-            <li><img src="./resources/images/ic-on-campus.svg"/></li>
-            <li><img src="./resources/images/ic-online.svg"/></li>
-            <li><img src="./resources/images/ic-login.svg"/></li>
+            <li><img src="./resources/images/ic-logo-p.svg"/></li>
+            <li><img src="./resources/images/ic-on-campus-p.svg"/></li>
+            <li><img src="./resources/images/ic-online-p.svg"/></li>
+            <li><img src="./resources/images/ic-login-p.svg"/></li>
           </ul>
         </nav>
       </div>
