--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
     <title>Colmar Academy</title>
@@ -11,16 +12,23 @@
       <div class="navigation">
         <div class="logo">
           <img src="./resources/images/ic-logo-p.svg"/>
-          <h4>COLMAR
-            <span>ACADEMY</span>
-          </h4>
+          <span>COLMAR</span>
+          <span>ACADEMY</span>
         </div>
         <nav class="desktop-menu">
           <ul>
-            <li>On Campus</li>
-            <li>Online</li>
-            <li>For Companies</li>
-            <li>Sign In</li>
+            <li>
+              <a href="#">On Campus</a>
+            </li>
+            <li>
+              <a href="#">Online</a>
+            </li>
+            <li>
+              <a href="#">For Companies</a>
+            </li>
+            <li>
+              <a href="#">Sign In</a>
+            </li>
           </ul>
         </nav>
         <nav class="mobile-menu">
@@ -168,8 +176,12 @@
         <span class="copyright">© 2016 Colmar Academy. All rights reserved</span>
         <nav>
           <ul>
-            <li>Terms</li>
-            <li>Privacy</li>
+            <li>
+              <a href="#">Terms</a>
+            </li>
+            <li>
+              <a href="#">Privacy</a>
+            </li>
           </ul>
         </nav>
       </div>
