add accesibility features.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header>
       <div class="navigation">
         <div class="logo">
-          <img src="./resources/images/ic-logo-p.svg"/>
+          <img src="./resources/images/ic-logo-p.svg" alt="Colmar Academy logo"/>
           <span>COLMAR</span>
           <span>ACADEMY</span>
         </div>
         <nav class="desktop-menu">
-          <ul>
+          <ul role="presentation">
             <li>
               <a href="#">On Campus</a>
             </li>
@@ -32,18 +32,26 @@
           </ul>
         </nav>
         <nav class="mobile-menu">
-          <ul>
-            <li><img src="./resources/images/ic-logo-p.svg"/></li>
-            <li><img src="./resources/images/ic-on-campus-p.svg"/></li>
-            <li><img src="./resources/images/ic-online-p.svg"/></li>
-            <li><img src="./resources/images/ic-login-p.svg"/></li>
+          <ul role="presentation">
+            <li>
+              <img src="./resources/images/ic-logo-p.svg" alt="Colmar Academy"/>
+            </li>
+            <li>
+              <img src="./resources/images/ic-on-campus-p.svg" alt="On Campus"/>
+            </li>
+            <li>
+              <img src="./resources/images/ic-online-p.svg" alt="Online"/>
+            </li>
+            <li>
+              <img src="./resources/images/ic-login-p.svg" alt="Login"/>
+            </li>
           </ul>
         </nav>
       </div>
     </header>
     <main class="main-content">
       <section class="first-section">
-        <img src="./resources/images/banner.jpg"/>
+        <img src="./resources/images/banner.jpg" alt=""/>
         <div class="side">
           <h1>Learn something new everyday</h1>
           <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
@@ -53,15 +61,15 @@
       <section class="information">
         <div class="container">
           <div class="left-side">
-            <img src="./resources/images/information-main.jpg"/>
+            <img src="./resources/images/information-main.jpg" alt=""/>
             <h1>It doesn't hurt to keep practicing</h1>
             <p>"Curabitur vitae libero ipsum porttior consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet efficitur dolo consequat, tristique ligula."</p>
             <h5>Emanuel, Sr Strategist at Hiring.com</h5>
           </div>
           <div class="right-side">
             <div class="box">
-              <img class="desktop" src="./resources/images/information-orientation.jpg"/>
-              <img class="mobile" src="./resources/images/information-orientation-mobile.jpg"/>
+              <img class="desktop" src="./resources/images/information-orientation.jpg" alt=""/>
+              <img class="mobile" src="./resources/images/information-orientation-mobile.jpg" alt=""/>
               <div class="side-text">
                 <h2>Orientation date</h2>
                 <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -69,8 +77,8 @@
               </div>
             </div>
             <div class="box">
-              <img class ="desktop" src="./resources/images/information-campus.jpg"/>
-              <img class="mobile" src="./resources/images/information-campus-mobile.jpg"/>
+              <img class ="desktop" src="./resources/images/information-campus.jpg" alt=""/>
+              <img class="mobile" src="./resources/images/information-campus-mobile.jpg" alt=""/>
               <div class="side-text">
                 <h2>Our campus</h2>
                 <p>Find which campus is close to you</p>
@@ -78,8 +86,8 @@
               </div>
             </div>
             <div class="box">
-              <img class="desktop" src="./resources/images/information-guest-lecture.jpg"/>
-              <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg"/>
+              <img class="desktop" src="./resources/images/information-guest-lecture.jpg" alt=""/>
+              <img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt=""/>
               <div class="side-text">
                 <h2>Our guest lecture</h2>
                 <p>Join a keynote with Oliver Sack about music in medical treatment</p>
@@ -93,7 +101,7 @@
         <h1>Start learning</h1>
         <div class="courses">
           <div class="course-content">
-            <img src="./resources/images/course-software.jpg"/>
+            <img src="./resources/images/course-software.jpg" alt="Software courses"/>
             <div class="course-text">
               <h3>Software engineering</h3>
               <p class="title">COURSES</p>
@@ -101,7 +109,7 @@
             </div>
           </div>
           <div class="course-content">
-            <img src="./resources/images/course-computer-art.jpg"/>
+            <img src="./resources/images/course-computer-art.jpg" alt="Computer Art courses"/>
             <div class="course-text">
               <h3>Computer art</h3>
               <p class="title">COURSES</p>
@@ -109,7 +117,7 @@
             </div>
           </div>
           <div class="course-content">
-            <img src="./resources/images/course-design.jpg"/>
+            <img src="./resources/images/course-design.jpg" alt="Design courses"/>
             <div class="course-text">
               <h3>Design</h3>
               <p class="title">COURSES</p>
@@ -117,7 +125,7 @@
             </div>
           </div>
           <div class="course-content">
-            <img src="./resources/images/course-data.jpg"/>
+            <img src="./resources/images/course-data.jpg" alt="Data courses"/>
             <div class="course-text">
               <h3>Data</h3>
               <p class="title">COURSES</p>
@@ -125,7 +133,7 @@
             </div>
           </div>
           <div class="course-content">
-            <img src="./resources/images/course-business.jpg"/>
+            <img src="./resources/images/course-business.jpg" alt="Business courses"/>
             <div class="course-text">
               <h3>Business</h3>
               <p class="title">COURSES</p>
@@ -133,7 +141,7 @@
             </div>
           </div>
           <div class="course-content">
-            <img src="./resources/images/course-marketing.jpg"/>
+            <img src="./resources/images/course-marketing.jpg" alt="Marketing courses"/>
             <div class="course-text">
               <h3>Marketing</h3>
               <p class="title">COURSES</p>
@@ -154,14 +162,14 @@
           </div>
           <div class="right-side">
             <div class="box">
-              <img class="desktop" src="./resources/images/thesis-fisma.jpg"/>
+              <img class="desktop" src="./resources/images/thesis-fisma.jpg" alt=""/>
               <div class="side-text">
                 <h2>Fisma: Design and Security</h2>
                 <p>Designer showcase of new prototype product</p>
               </div>
             </div>
             <div class="box">
-              <img class="desktop" src="./resources/images/thesis-now-and-then.jpg"/>
+              <img class="desktop" src="./resources/images/thesis-now-and-then.jpg" alt=""/>
               <div class="side-text">
                 <h2>Now and then</h2>
                 <p>Research study about New York</p>
@@ -175,7 +183,7 @@
       <div class="navigation">
         <span class="copyright">© 2016 Colmar Academy. All rights reserved</span>
         <nav>
-          <ul>
+          <ul role="presentation">
             <li>
               <a href="#">Terms</a>
             </li>
